--- a/package.json
+++ b/package.json
@@ -1,20 +1,46 @@
 {
-  "name": "sample-nextjs",
+  "name": "sample-nextjs-typescript-jest",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "description": "Next.js starter with TypeScript, Jest, Testing-Library",
+  "keywords": [
+    "Next.js starter",
+    "Next.js",
+    "TypeScript",
+    "Jest",
+    "Jamstack"
+  ],
+  "author": "Mustafa Celik <celikmus@gmail.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/celikmus/sample-nextjs-typescript-jest.git"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^11.1.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.1",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.2",
+    "@types/react": "^17.0.26",
+    "babel-jest": "^27.2.4",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.4",
+    "react-test-renderer": "^17.0.2",
+    "typescript": "^4.4.3"
   }
 }
