--- a/package.json
+++ b/package.json
@@ -24,23 +24,23 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "next": "^11.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "^12.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.1",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.2",
-    "@types/react": "^17.0.26",
-    "babel-jest": "^27.2.4",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "^11.1.2",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
+    "@types/jest": "^28.1.3",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "babel-jest": "^28.1.1",
+    "eslint": "^8.18.0",
+    "eslint-config-next": "^12.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.2.4",
-    "react-test-renderer": "^17.0.2",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^4.4.3"
   }
 }
